--- a/app/app/partials/header.html
+++ b/app/app/partials/header.html
@@ -1,14 +1,5 @@
-<!doctype html>
-<html lang="">
- <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
-  <link rel="stylesheet" href="/css/main.css">  
- </head>
- <body> 
-  <header>
-    I'm a header! (partials/header.html)
-  </header>
+<!doctype HTML>
+<html>
+<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+<!--
+<script src="/assets/js/arjs.js"> </script>-->
