Send wishes form

--- a/app/app/scss/main.scss
+++ b/app/app/scss/main.scss
@@ -8,3 +8,20 @@ body {
 	background: $darkBlue;
 	color: #fff;
 }
+
+.form {
+&__input{
+	
+}
+	
+&__form{
+		
+	}
+
+&--disabled{
+	display:none
+}
+&--enabled{
+	display:block
+}
+}
