--- a/app/app/scss/main.scss
+++ b/app/app/scss/main.scss
@@ -4,24 +4,168 @@
 	display:none!important;
 }
 
-body {
-	background: $darkBlue;
-	color: #fff;
+@import "variables.scss";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-.form { 
-	&__input{ 
-	   
+
+body {
+	background: #1a213e;
+	color: #fff;
+	font-family: 'Open Sans';
+}
+
+
+.bear {
+	margin-bottom: 30px;
+}
+
+.container {
+	max-width: 1170px;
+	padding: 30px;
+	margin: 0 auto;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+	z-index: 2;
+	&--flex { 
+		display: flex;
+		width: 100%;
+		align-items: center;
+		justify-content: flex-start;
+		@media (max-width: 768px) {
+			display: block;
+			padding: 30px 10px;
+		}
+	}
+}
+
+
+
+.st0 {
+	stroke-width: 1px;
+stroke: #fff;
+fill: rgba(0,0,0,0);
+transition: fill 0.3s ease-in;
+}
+
+.main {
+	min-height: 100vh;
+	background: url('/assets/img/bg.jpg');
+	background-size: cover;
+	background-position: center center;
+	background-attachment: fixed;
+	flex-direction: column;
+	@media (max-width: 768px) {
+		background-attachment: initial;
+	}
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #fff;
+	padding: 30px;
+	&:after {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(#1a213e,0.9);
+		content: "";
+	}
+}
+
+h1 {
+	position: relative;
+	z-index: 2;
+	margin-bottom: 30px;
+}
+
+.logo {
+	width: 300px;
+	flex-shrink: 0;
+	position: relative;
+	z-index: 2;
+	margin: 0 auto;
+}
+
+.form {  
+	position: relative;
+	z-index: 2;
+	width: 300px;
+	label {
+		display: block;
+		width: 100%;
+		cursor: pointer;
+		font-size: 14px;
+	}
+	input {
+		display: block;
+		width: 100%; 
+		margin-top: 5px;
+		margin-bottom: 15px;
+		padding: 10px;
+		background: rgba(255,255,255,0.7);
+		border: none;
+		outline: none;
+		border-radius: 3px;
+		font-size: 18px;
+	}
+	&__send {
+		width: 100%;
+		padding: 15px;
+		background: #E61E73;
+		border: none;
+		color: #fff;
+		font-size: 14px;
+		margin-top: 15px;
+		border-radius: 3px;
 	} 
-	   
-	&__form{ 
-		 
-	  } 
-	 
+
 	&--disabled{ 
 	  display:none 
 	} 
 	&--enabled{ 
 	  display:block 
 	} 
+}
+
+.url {
+
+	position: relative;
+	z-index: 2;
+	width: 300px;
+	
+	input {
+		display: block;
+		width: 300px; 
+		margin-top: 5px;
+		margin-bottom: 15px;
+		padding: 10px;
+		background: rgba(255,255,255,0.7);
+		border: none;
+		outline: none;
+		border-radius: 3px;
+		font-size: 18px; 
+	}
+}
+
+
+.marker {
+	display: block;
+	max-width: 300px;
+	&__wrapper {
+		width: 100%;
+		height: 100vh;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 }
