--- a/app/app/scss/main.scss
+++ b/app/app/scss/main.scss
@@ -142,7 +142,7 @@ h1 {
 	position: relative;
 	z-index: 2;
 	width: 300px;
-	
+
 	input {
 		display: block;
 		width: 300px; 
@@ -167,5 +167,47 @@ h1 {
 		display: flex;
 		align-items: center;
 		justify-content: center;
+	}
+}
+
+.rotate {
+	display: none;
+}
+
+@media (orientation: portrait) {
+.rotate {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background: #1a213e;
+	z-index: 2000;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	img {
+		display: block;
+		margin-bottom: 30px;
+		max-width: 200px;
+	}
+}
+}
+
+.facebook {
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	background: #1a213e;
+	z-index: 3000;
+	top: 0;
+	left: 0;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	display: none;
+	&--visible {
+		display: flex; 
 	}
 }
