--- a/app/app/scss/main.scss
+++ b/app/app/scss/main.scss
@@ -113,11 +113,18 @@ h1 {
 		margin-bottom: 15px;
 		padding: 10px;
 		background: rgba(255,255,255,0.7);
-		border: none;
+		border: 1px solid transparent;
 		outline: none;
 		border-radius: 3px;
 		font-size: 18px;
+
+		
 	}
+	
+	.invalid{
+		border: 1px solid #E61E73;
+	}
+
 	&__send {
 		width: 100%;
 		padding: 15px;
@@ -127,6 +134,7 @@ h1 {
 		font-size: 14px;
 		margin-top: 15px;
 		border-radius: 3px;
+		cursor: pointer;
 	} 
 
 	&--disabled{ 
